Committing files for assignment 3.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="title_activity_movies_list">MoviesList</string>
     <string name="title_activity_movies_status">MoviesStatus</string>
     <string name="title_activity_instructions">Instructions</string>
+    <string name="title_activity_delete">DeleteActivity</string>
 </resources>
